try to implement stripe and paypal, not complete yet, input overflow issue solve, filter close done

--- a/src/Component/Filter/Filter.css
+++ b/src/Component/Filter/Filter.css
@@ -14,6 +14,16 @@
   /* z-index: 1000; */
 }
 
+.filter__container {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 111;
+  margin-left: -17.5rem;
+  margin-top: -6rem;
+  /* background-color: red; */
+}
+
 .filter::-webkit-scrollbar-thumb {
   background-color: var(--text-color);
   border-radius: 15px;
@@ -92,3 +102,15 @@
   opacity: 0;
   transition: opacity 1000ms ease-in-out;
 } */
+
+@media screen and (max-width: 1024px) {
+  .filter__container {
+    margin-left: -7rem !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .filter__container {
+    margin-left: 0rem !important;
+  }
+}
